--- a/Follow-The-Voice/index.html
+++ b/Follow-The-Voice/index.html
@@ -4,14 +4,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Follow The Voice</title>
     <link rel="stylesheet" href="style/style.css">
 </head>
 
 <body>
+    <div>
+        <img id="logo" src="images/logo.jpg" alt="logo">
+    </div>
 
+    <div id="container">
+        <a id="play-button" href="pages/start-game-page.html">PLAY!</a>
+        <a id="how-to-play-button" href="pages/how-to-play-1.html">How to play</a>
+    </div>
 
     <script src="javascript/main.js"></script>
+
 </body>
 
 </html>
