--- a/Follow-The-Voice/index.html
+++ b/Follow-The-Voice/index.html
@@ -13,11 +13,12 @@
         <img id="logo" src="images/logo.jpg" alt="logo">
     </div>
 
-    <div id="container">
-        <a id="play-button" href="pages/start-game-page.html">PLAY!</a>
+    <div class="container">
+        <a id="play-button" href="pages/players.html">PLAY!</a>
         <a id="how-to-play-button" href="pages/how-to-play-1.html">How to play</a>
     </div>
 
+    <script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
     <script src="javascript/main.js"></script>
 
 </body>
