--- a/Follow-The-Voice/pages/how-to-play-1.html
+++ b/Follow-The-Voice/pages/how-to-play-1.html
@@ -4,11 +4,39 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>How to play</title>
+    <link rel="stylesheet" href="/style/how-to-play.css">
 </head>
 
 <body>
+    <div id="container">
+        <div>
+            <h1 class="english">Follow the VOICE</h1>
+            <hr>
+        </div>
 
+        <div>
+            <p class="arabic" id="position-name">جمل ماشي</p>
+        </div>
+
+        <div>
+            <img src="/images/logo.jpg" alt="">
+        </div>
+
+        <div>
+            <p class="arabic" id="position-step">إذا سمعت "جمل ماشي" حط يدك عالأرض</p>
+            <hr>
+        </div>
+
+        <div class="english">
+            <p><a href="/index.html" id="first-previous">HOME</a></p>
+            <p id="page-number">1 / 4</p>
+            <p><a href="/pages/how-to-play-2.html" id="next">Next</a></p>
+        </div>
+
+    </div>
+
+    <script src="/javascript/main.js"></script>
 </body>
 
 </html>
