did the game page and added audio folder with 4 files in it

--- a/Follow-The-Voice/pages/players.html
+++ b/Follow-The-Voice/pages/players.html
@@ -13,7 +13,7 @@
         <h1>Player Names
             <hr>
         </h1>
-        <p id="players">Player 1: <input></p>
+        <p id="players">Player 1: <input id="player-name"></p>
         <button>+</button>
 
         <div>
@@ -21,6 +21,10 @@
             <a id="players-play-button" href="/pages/start-game-page.html">PLAY!</a>
         </div>
     </div>
+
+
+    <script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
+    <script src="/javascript/main.js"></script>
 </body>
 
 </html>
