--- a/Follow-The-Voice/pages/start-game-page.html
+++ b/Follow-The-Voice/pages/start-game-page.html
@@ -4,11 +4,31 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>How to play</title>
+    <link rel="stylesheet" href="/style/how-to-play.css">
+    <link rel="stylesheet" href="/style/style.css">
 </head>
 
 <body>
+    <div id="container">
+        <div>
+            <h1 class="english">Follow the VOICE</h1>
+            <hr>
+        </div>
+        <div>
+            <img src="/images/logo.jpg" alt="">
+            <hr>
+        </div>
 
+        <div class="english">
+            <p><a href="/index.html">Exit</a></p>
+            <p><button id="pause-button">Pause</button></p>
+            <p><button id="resume-button">Resume</button></p>
+        </div>
+
+    </div>
+    <script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
+    <script src="/javascript/main.js"></script>
 </body>
 
 </html>
