all working exept the pause button

--- a/Follow-The-Voice/pages/how-to-play-3.html
+++ b/Follow-The-Voice/pages/how-to-play-3.html
@@ -24,7 +24,7 @@
         </div>
 
         <div>
-            <p class="arabic" id="position-step">إذا سمعت "جيت أضمه" سوو نفس الصورة</p>
+            <p class="arabic" id="position-step">إذا سمعت "جيت أضمه" إحضن نفسك</p>
             <hr>
         </div>
 
