--- a/Follow-The-Voice/pages/start-game-page.html
+++ b/Follow-The-Voice/pages/start-game-page.html
@@ -7,25 +7,31 @@
     <title>How to play</title>
     <link rel="stylesheet" href="/style/how-to-play.css">
     <link rel="stylesheet" href="/style/style.css">
+    <link rel="stylesheet" href="/style/game.css">
+
 </head>
 
 <body>
+    <embed id="audio" loop="true" src="" hidden="true" autoplay="autoplay" PLUGINSPAGE="http://www.apple.com/quicktime/"></embed>
     <div id="container">
         <div>
             <h1 class="english">Follow the VOICE</h1>
             <hr>
         </div>
-        <div>
-            <img src="/images/logo.jpg" alt="">
+        <div id="words-div">
+            <!-- <img src="/images/logo.jpg" alt=""> -->
+            <p id="game-words">Press Start</p>
+
             <hr>
         </div>
 
         <div class="english">
             <p><a href="/index.html">Exit</a></p>
-            <p><button id="pause-button">Pause</button></p>
-            <p><button id="resume-button">Resume</button></p>
-        </div>
+            <p><button id="test">Start</button></p>
+            <p><button id="pause">Pause</button></p>
 
+            <!-- <p><button id="resume-button">Resume</button></p> -->
+        </div>
     </div>
     <script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
     <script src="/javascript/main.js"></script>
