--- a/Follow-The-Voice/pages/how-to-play-3.html
+++ b/Follow-The-Voice/pages/how-to-play-3.html
@@ -20,7 +20,7 @@
         </div>
 
         <div>
-            <img src="/images/logo.jpg" alt="">
+            <img src="/images/3.png" alt="">
         </div>
 
         <div>
