--- a/Follow-The-Voice/pages/how-to-play-4.html
+++ b/Follow-The-Voice/pages/how-to-play-4.html
@@ -20,7 +20,7 @@
         </div>
 
         <div>
-            <img src="/images/logo.jpg" alt="">
+            <img src="/images/4.png" alt="">
         </div>
 
         <div>
