--- a/Follow-The-Voice/pages/how-to-play-4.html
+++ b/Follow-The-Voice/pages/how-to-play-4.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>How to play</title>
-    <link rel="stylesheet" href="/style/how-to-play.css">
+    <link rel="stylesheet" href="/Follow-The-Voice/style/how-to-play.css">
 </head>
 
 <body>
@@ -20,7 +20,7 @@
         </div>
 
         <div>
-            <img src="/images/4.png" alt="">
+            <img src="/Follow-The-Voice/images/4.png" alt="">
         </div>
 
         <div>
@@ -29,15 +29,15 @@
         </div>
 
         <div class="english">
-            <p><a href="/pages/how-to-play-3.html" id="previous">Prev</a></p>
+            <p><a href="/Follow-The-Voice/pages/how-to-play-3.html" id="previous">Prev</a></p>
             <p id="page-number">4 / 4</p>
-            <p><a href="/pages/players.html" id="last-next">PLAY!</a></p>
+            <p><a href="/Follow-The-Voice/pages/players.html" id="last-next">PLAY!</a></p>
         </div>
 
     </div>
 
     <script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
-    <script src="/javascript/main.js"></script>
+    <script src="/Follow-The-Voice/javascript/main.js"></script>
 </body>
 
 </html>
