--- a/pages/players.html
+++ b/pages/players.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Players</title>
-    <link rel="stylesheet" href="/style/style.css">
+    <link rel="stylesheet" href="/project-1-game/style/style.css">
 </head>
 
 <body>
@@ -25,13 +25,13 @@
         </div>
         <div>
             <a id="players-play-button" href="/pages/start-game-page.html">PLAY!</a>
-            <a id="players-home-button" href="/index.html">HOME</a>
+            <a id="players-home-button" href="/project-1-game/index.html">HOME</a>
         </div>
     </div>
 
 
     <script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
-    <script src="/javascript/main.js"></script>
+    <script src="/project-1-game/javascript/main.js"></script>
 </body>
 
 </html>
