--- a/pages/players.html
+++ b/pages/players.html
@@ -24,7 +24,7 @@
             <button id="delete">-</button>
         </div>
         <div>
-            <a id="players-play-button" href="/pages/start-game-page.html">PLAY!</a>
+            <a id="players-play-button" href="/project-1-game/pages/start-game-page.html">PLAY!</a>
             <a id="players-home-button" href="/project-1-game/index.html">HOME</a>
         </div>
     </div>
