--- a/pages/start-game-page.html
+++ b/pages/start-game-page.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>How to play</title>
-    <link rel="stylesheet" href="/project-1-game/style/how-to-play.css">
-    <link rel="stylesheet" href="/project-1-game/style/style.css">
-    <link rel="stylesheet" href="/project-1-game/style/game.css">
+    <link rel="stylesheet" href="../style/how-to-play.css">
+    <link rel="stylesheet" href="../style/style.css">
+    <link rel="stylesheet" href="../style/game.css">
 
 </head>
 
@@ -26,7 +26,7 @@
         </div>
 
         <div class="english">
-            <p><a href="/project-1-game/index.html">Exit</a></p>
+            <p><a href="../index.html">Exit</a></p>
             <p><button id="test">Start</button></p>
             <p><button id="pause">Pause</button></p>
 
@@ -34,7 +34,7 @@
         </div>
     </div>
     <script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
-    <script src="/project-1-game/javascript/main.js"></script>
+    <script src="../javascript/main.js"></script>
 </body>
 
 </html>
