--- a/index.html
+++ b/index.html
@@ -5,21 +5,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Follow The Voice</title>
-    <link rel="stylesheet" href="style/style.css">
+    <link rel="stylesheet" href="../style/style.css">
 </head>
 
 <body>
     <div>
-        <img id="logo" src="images/logo.jpg" alt="logo">
+        <img id="logo" src="../logo.jpg" alt="logo">
     </div>
 
     <div class="container">
-        <a id="play-button" href="pages/players.html">PLAY!</a>
-        <a id="how-to-play-button" href="pages/how-to-play-1.html">How to play</a>
+        <a id="play-button" href="../players.html">PLAY!</a>
+        <a id="how-to-play-button" href="../how-to-play-1.html">How to play</a>
     </div>
 
     <script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
-    <script src="/javascript/main.js"></script>
+    <script src="../javascript/main.js"></script>
 
 </body>
 
